--- a/index.html
+++ b/index.html
@@ -12,21 +12,95 @@
     />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="img-area">
-        <div class="inner-area">
-          <img src="user.jpg" alt="" />
+    <div class="top_card">
+      <div class="wrapper">
+        <div class="img-area">
+          <div class="inner-area">
+            <img src="user.jpg" alt="" />
+          </div>
+        </div>
+        <div class="name">MH RONY</div>
+        <div class="about">Phyics</div>
+        <div class="social_icon">
+          <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="buttons">
+          <button><a href="">Message</a></button>
         </div>
       </div>
-      <div class="name">MH RONY</div>
-      <div class="about">Phyics</div>
-      <div class="social_icon">
-        <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
-        <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+
+      <div class="wrapper">
+        <div class="img-area">
+          <div class="inner-area">
+            <img src="user.jpg" alt="" />
+          </div>
+        </div>
+        <div class="name">MH RONY</div>
+        <div class="about">Phyics</div>
+        <div class="social_icon">
+          <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="buttons">
+          <button><a href="">Message</a></button>
+        </div>
       </div>
-      <div class="buttons">
-        <button><a href="">Message</a></button>
+
+      <div class="wrapper">
+        <div class="img-area">
+          <div class="inner-area">
+            <img src="user.jpg" alt="" />
+          </div>
+        </div>
+        <div class="name">MH RONY</div>
+        <div class="about">Phyics</div>
+        <div class="social_icon">
+          <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="buttons">
+          <button><a href="">Message</a></button>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="img-area">
+          <div class="inner-area">
+            <img src="user.jpg" alt="" />
+          </div>
+        </div>
+        <div class="name">MH RONY</div>
+        <div class="about">Phyics</div>
+        <div class="social_icon">
+          <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="buttons">
+          <button><a href="">Message</a></button>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="img-area">
+          <div class="inner-area">
+            <img src="user.jpg" alt="" />
+          </div>
+        </div>
+        <div class="name">MH RONY</div>
+        <div class="about">Phyics</div>
+        <div class="social_icon">
+          <a href="" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="" class="instra"><i class="fa-brands fa-instagram"></i></a>
+          <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="buttons">
+          <button><a href="">Message</a></button>
+        </div>
       </div>
     </div>
   </body>
